stderr
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
Hiker.kt:6:37: error: type mismatch: inferred type is Boolean.Companion but Int was expected
    val initialState = BooleanArray(Boolean){true}
                                    ^
